-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
-
be0a231
When I start a very simple application with just a Qml Camera and VideoOutput elements, the live video feed is stuck and only still image shown on the screen.
- Platform: Windows Phone 8.1
- Device: Nokia Lumia 630
- Compiled with visual studio after "qmake -tp vc"
- Added <DeviceCapability Name="webcam"/> to Package.appxmanifest
- Compiled in Debug mode (release won't compile)
Source:
import QtQuick 2.4 import QtQuick.Controls 1.3 import QtQuick.Layouts 1.1 import QtMultimedia 5.4 Item { Camera { id: camera imageCapture { id: capture onImageCaptured: { console.log(preview.toString) } onImageSaved: { console.log(path) } } } VideoOutput { id: previewWindow anchors.fill: parent focus : visible source: camera } }
| For Gerrit Dashboard: QTBUG-44838 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 110533,8 | winrt: fix camera preview on Lumia 630 | 5.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |